# emg

./: .gitignore  Cargo.toml  Makefile  README.md
examples/blocks/: Cargo.toml
examples/blocks/src/: lib.rs
macros/: Cargo.toml
macros/src/: emg-macros.rs  paragen-macros.rs
src/: emg-cli.rs  emg.rs  lib.rs  main.rs  paragen.rs
tests/: build_the_model-pretty.gltf  build_the_model.glb  emg-cli.rs
