[package]
name = "paragen"
version = "0.1.0"
edition = "2021"
authors = ["Den Antares"]
license = "TODO"
readme = "README.md"
categories = ["wasm", "graphics"]
repository = "https://github.com/Densaugeo/paragen"
homepage = "TODO"
documentation = "TODO"
description = """
Parametrically generate .gltf using WebAssembly modules
"""

[lib]
path = "src/paragen.rs"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_tuple = "0.5.0"
serde_repr = "0.1.17"
paragen-macros = { path = "macros" }
