[package]
name = "emg"
version = "0.1.0"
edition = "2021"
authors = ["Den Antares"]
license = "TODO"
readme = "README.md"
categories = ["wasm", "graphics"]
repository = "https://github.com/Densaugeo/emg"
homepage = "TODO"
documentation = "TODO"
description = """
Ethereal Model Generator - Procedurally generate .gltf using WebAssembly modules
"""

[lib]
path = "src/emg.rs"

[[bin]]
name = "emg"
path = "src/emg-cli.rs"
required-features = ["cli"]

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_tuple = "0.5.0"
serde_repr = "0.1.17"
base64 = "0.21.5"
emg-macros = { path = "macros" }

# Dependencies for the CLI tool
clap = { version = "4.4.7", features = ["derive"], optional = true }
wasmtime = { version = "14.0.4", optional = true }

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
rstest = "0.18.2"

[features]
cli = ["dep:clap", "dep:wasmtime"]
