[package]
name = "blocks"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Compiler optimizations recommended by https://betterprogramming.pub/how-to-
# pass-arrays-between-javascript-and-wasm-in-rust-9f2eeee7f2b6 . Reduced compile
# size for hello world from 1.7 MB to 13.7kB
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"

[profile.dev]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = "fat"

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
base64 = "0.21.5"
# Local paragen copy used for paragen development. To use this example in
# another project, replace the line below with `paragen = "VERSION"`
paragen = { path = "../.." }
